<resources>
    <string name="app_name">Joinme</string>
    <string name="button_like">Like</string>
    <string name="button_comment">Comment</string>
    <string name="button_favorite">Favorite</string>
    <string name="cardview_username">Username</string>
    <string name="description">Descripcion de ideas</string>
    <string name="place">Destination of the trip</string>
    <string name="date">12/20/2018</string>

    <string name="img_logo">Joinme Logo</string>
    <string name="login_button">Login</string>
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="title_activity_joinme_main">JoinmeMain</string>
    <string name="title_home">Home</string>
    <string name="title_explore">Explore</string>
    <string name="title_new">New</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_perfil">Profile</string>
    <string name="username">Username</string>


</resources>
