<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/joinme_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/joinme_explore"
        android:icon="@drawable/baseline_explore_black_18dp"
        android:title="@string/title_explore" />

    <item
        android:id="@+id/joinme_new"
        android:icon="@drawable/baseline_add_box_black_18dp"
        android:title="@string/title_new" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/joinme_perfil"
        android:icon="@drawable/baseline_account_circle_black_18dp"
        android:title="@string/title_perfil" />



</menu>
