<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.JoinmeLogin"
    android:orientation="vertical"
    android:gravity="center_horizontal">


    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/img_logo"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_launcher_round"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/username"
        android:inputType="text"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>
    <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
            />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:onClick="login"
        android:text="@string/login_button" />
    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:textColor="@color/colorAccent"
        />

</LinearLayout>