<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="300dp"
    android:layout_height="200dp"
    card_view:cardCornerRadius="16dp"
    android:elevation="7dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorAccent">
            <ImageView
                android:id="@+id/userImg"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/img_logo"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_launcher_round"
                android:layout_marginStart="16dp"
                />

            <TextView
                android:id="@+id/info_text"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:text="@string/cardview_username"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_like"
                android:textSize="16sp" />
            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_comment"
                android:textSize="16sp"/>
            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_favorite"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/joinme_ideas"
                android:contentDescription="@string/description"
                android:scaleType="centerInside" />

        </LinearLayout>




    </LinearLayout>



</android.support.v7.widget.CardView>
